--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "framer-motion": "^10.16.16",
     "lodash": "^4.17.21",
     "lodash.merge": "^4.6.2",
+    "phaser": "^3.70.0",
+    "phaser3-rex-plugins": "^1.60.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
