--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.16",
+    "hammerjs": "^2.0.8",
     "lodash": "^4.17.21",
     "lodash.merge": "^4.6.2",
     "phaser": "^3.70.0",
