--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@amplitude/analytics-browser": "^2.3.8",
     "@blocto/sdk": "^0.9.0-beta.2",
     "@blocto/web-chakra-theme": "^1.2.9",
+    "@blocto/web3modal-connector": "^0.1.4",
     "@chakra-ui/anatomy": "^2.2.2",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@tanstack/react-query": "^5.17.19",
+    "@web3modal/ethereum": "^2.7.1",
+    "@web3modal/react": "^2.7.1",
     "framer-motion": "^10.16.16",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.21",
@@ -28,8 +32,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
+    "viem": "~1.0.0",
     "vite-plugin-node-polyfills": "^0.17.0",
     "vite-plugin-svgr": "^4.2.0",
+    "wagmi": "^1.4.12",
     "web3": "^4.3.0"
   },
   "devDependencies": {
