--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@amplitude/analytics-browser": "^2.3.8",
     "@blocto/sdk": "^0.9.0-beta.2",
     "@blocto/web-chakra-theme": "^1.2.9",
-    "@blocto/web3modal-connector": "^0.1.4",
+    "@blocto/wagmi-connector": "^2",
     "@chakra-ui/anatomy": "^2.2.2",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
@@ -32,11 +32,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
-    "viem": "~1.0.0",
+    "viem": "^2.4.0",
+    "wagmi": "2.0.1",
     "vite-plugin-node-polyfills": "^0.17.0",
-    "vite-plugin-svgr": "^4.2.0",
-    "wagmi": "^1.4.12",
-    "web3": "^4.3.0"
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
