--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@amplitude/analytics-browser": "^2.3.8",
     "@blocto/sdk": "^0.9.0-beta.2",
-    "@blocto/web-chakra-theme": "^1.2.9",
     "@blocto/wagmi-connector": "^2",
+    "@blocto/web-chakra-theme": "^1.2.9",
     "@chakra-ui/anatomy": "^2.2.2",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
@@ -33,9 +33,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
     "viem": "^2.4.0",
-    "wagmi": "2.0.1",
     "vite-plugin-node-polyfills": "^0.17.0",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "wagmi": "2.0.1",
+    "web3": "^4.4.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
