--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "viem": "^2.4.0",
     "vite-plugin-node-polyfills": "^0.17.0",
     "vite-plugin-svgr": "^4.2.0",
-    "wagmi": "2.0.1",
-    "web3": "^4.4.0"
+    "wagmi": "2.0.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
