--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query": "^5.17.19",
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/react": "^2.7.1",
+    "bignumber.js": "^9.1.2",
     "framer-motion": "^10.16.16",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.21",
