--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "phaser3-rex-plugins": "^1.60.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.4",
     "react-router-dom": "^6.21.0",
     "viem": "^2.4.0",
     "vite-plugin-node-polyfills": "^0.17.0",
