--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-router-dom": "^6.21.0",
+    "react-use-audio-player": "^2.2.0",
     "viem": "^2.4.0",
     "vite-plugin-node-polyfills": "^0.17.0",
     "vite-plugin-svgr": "^4.2.0",
