--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.3.8",
-    "@blocto/sdk": "^0.9.0-beta.2",
-    "@blocto/wagmi-connector": "^2",
+    "@blocto/sdk": "^0.10.0",
+    "@blocto/wagmi-connector": "2.0.0",
     "@blocto/web-chakra-theme": "^1.2.9",
     "@chakra-ui/anatomy": "^2.2.2",
     "@chakra-ui/icons": "^2.1.1",
